新增api统计接口
